# cb-rbh-desktop

./: .gitattributes  .gitignore  .po_archive_manager.py.swp  Import Hachette Shipping Files.docx  README.md  data_2024-11-20.pkl  data_check.py  extract_pdf_tables.py  info_environment.txt  latest_amazon_po.pkl  main.py  main2.py  pytproject.toml  requirements.txt  run.sh  spyder_training.py  ssr_summary_chart.html  ssr_summary_chart_v2.html  web_launcher.py
.github/: CODEOWNERS
Abrams_Chronicle_rollling_reports/: __init__.py  main.py
FLTracking_Supercharged/: README.md  cache_utils.py  config.py  isbn_utils.py  main.py
Inventory_Obsolescence/: hbg_oracle_inventory_comparison.py
Monthly_Top_Customers/: __init__.py  main.py  queries.py
UK_Rolling_File_Combining/: load_midas.py  load_reserve.py  load_sales.py  main.py  main_test.py  paths.py
amazon_ams/: README.md  UPDATE_ams_config.py  combined_amazon_ads_by_asin.csv  combined_amazon_ads_by_asin.pkl  combined_amazon_ads_by_asin.xlsx  item_data.pkl  loader_asin_mapping.py  loader_item.py  loader_monthly_reports.py  main.py  main2.py  manage_ams.py  (+3 more)
reprint_forecast/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
reprint_forecast/sql/: hachette_orders.sql  sales.sql
reprint_forecast/src/reprint_forecast/: cli.py  config.py
reprint_forecast/src/reprint_forecast/features/: build_features.py
reprint_forecast/src/reprint_forecast/models/: evaluate.py  train.py
reprint_forecast/src/reprint_forecast/pipelines/: run_pipeline.py
reprint_forecast/tests/: test_prep.py
(+380 files in other folders)
